# -EPITECH-3-Babel

./: .gitignore  ANetwork.hpp  Babel.pro  CMakeLists.txt  clientBabel  generateVSSolution.bat  java  serverBabel  ui_mainwindow.h
NetworkConcept/: QtNetworkTest.pro
NetworkConcept/includes/: INetwork.hpp  Protocol.hpp  Session.hpp  TCPClient.hpp  TCPServer.hpp
NetworkConcept/src/: Session.cpp  TCPClient.cpp  TCPServer.cpp
docs/: links.txt
includes/: ACodec.hh  ANetwork.hpp  APackBuilder.hh  ASoundControler.hh  Codec.hh  DataBase.hpp  INetwork.hpp  PackBuilder.hh  Protocol.hpp  Server.hpp  Session.hpp  SoundControler.hh  SoundProperties.hh  TCPClient.hpp  TCPServer.hpp  TaskManager.hpp  ThreadPool.hpp  UDPClient.hpp  User.hpp  client.hpp  gui.hh  mainwindow.h  mycontactlistitem.h  server.hpp
libs/linux/: libQtNetwork.so.4.8.7  libpng16.so.16.23.0  redosymlink.sh
setup/: clientBabel  installBabelClient.sh  installBabelServer.sh  serverBabel
sources/client/core/: client.cpp  main.cpp
sources/client/gui/: gui.cpp  mainwindow.cpp  mainwindow.ui  mycontactlistitem.cpp
sources/client/network/: ANetwork.cpp  TCPClient.cpp  UDPClient.cpp
sources/client/protocol/: Protocol.cpp
sources/client/sound/: Codec.cpp  PackBuilder.cpp  SoundControler.cpp
sources/server/core/: Server.cpp  TaskManager.cpp  main.cpp  server.cpp
sources/server/database/: DataBase.cpp  User.cpp
sources/server/network/: Session.cpp  TCPServer.cpp
sources/server/protocol/: Protocol.cpp
tests/DataBase/: CMakeLists.txt  main.cpp
tests/DataBase/include/: DataBase.h  Protocol.h  Protocol.h.gch  User.h
tests/DataBase/rsc/: database.txt
tests/DataBase/src/: DataBase.cpp  User.cpp
tests/Gui/: Babel.pro  data.h  gui.cpp  gui.hh  main.cpp  mainwindow.cpp  mycontactlistitem.cpp  mycontactlistitem.h
tests/NetworkConcept/: QtNetworkTest.pro  mainClient.cpp  mainServer.cpp
tests/NetworkConcept/includes/: DataBase.hpp  INetwork.hpp  Protocol.hpp  Server.hpp  Session.hpp  TCPClient.hpp  TCPServer.hpp  TaskManager.hpp  ThreadPool.hpp  UDPClient.hpp
tests/NetworkConcept/rsc/: database.txt
tests/NetworkConcept/src/: BoostTest.cpp  DataBase.cpp  Protocol.cpp  Server.cpp  Session.cpp  TCPClient.cpp  TCPServer.cpp  TaskManager.cpp  UDPClient.cpp  User.cpp  main.cpp
tests/Protocol/: AProtocol.hpp  Protocol.cpp  Protocol.hpp  ProtocolClient.hpp  ProtocolServer.hpp
tests/Sound/: CMakeLists.txt  install.sh  uninstall.sh
tests/Sound/include/: ACodec.hh  ASoundControler.hh  Codec.hh  PackBuilder.hh  SoundControler.hh  SoundProperties.hh
tests/Sound/lib/linux/: libjack.so.0  libopus.so.0  libportaudio.so.2
tests/Sound/lib/win/: opus.lib  portaudio_x86.lib
tests/Sound/src/: Codec.cpp  PackBuilder.cpp  SoundControler.cpp  main.cpp
tests/compile/: CMakeLists.txt  libboost_system.so.1.60.0  test.cpp
tests/compile/libs/linux/: libQtCore.so.4.8.7  libboost_serialization.so.1.60.0  redosymlink.sh
